fix: Update spacing between elements

--- a/src/components/grid/index.scss
+++ b/src/components/grid/index.scss
@@ -4,7 +4,8 @@
   display: grid;
   grid-column-gap: 2rem;
   grid-row-gap: 3rem;
-  margin: 0 -1rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 @include lg {
