--- a/src/components/themeSwitch/index.scss
+++ b/src/components/themeSwitch/index.scss
@@ -3,6 +3,7 @@
 .theme-switch {
   padding: 1rem;
   margin: -1rem;
+  cursor: pointer;
 }
 
 .theme-switch:focus-within {
